# i2c

./: CMakeLists.txt  README.md
Board/: CMakeLists.txt
Board/STM32F0/: Board.cmake  Main.cpp  Main.hpp
Board/STM32F1/: Board.cmake  Main.cpp  Main.hpp
DroneDevice/: .clang-format  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
DroneDevice/Descriptions/geoscan/: 20002.ActuatorStatusUnitless.uavcan  20006.DataStream.uavcan  20007.BaroHeight.uavcan  FileRead.uavcan  FileWrite.uavcan  GetFieldInfo.uavcan  MediaPassport.uavcan
DroneDevice/Include/DroneDevice/: AbstractDevice.hpp  Address.hpp  Aes.hpp  Can.hpp  ConfigStorage.hpp  CoreTypes.hpp  Crc16.hpp  Crc32.hpp  Crc8.hpp  DebugHelpers.hpp  DeviceObserver.hpp  FastCrc16.hpp  FastCrc32.hpp  FastCrc8.hpp  FieldInfo.hpp  FileInfo.hpp  List.hpp  MemoryRegion.hpp  Queue.hpp  RefCounter.hpp  RequestPool.hpp  Sha256.hpp  StaticDeviceHub.hpp  TypeHash.hpp  TypeHelpers.hpp
DroneDevice/Include/DroneDevice/InternalDevice/: AbstractField.hpp  AbstractFile.hpp  BlankField.hpp  ConfigField.hpp  ExtendedVolatileField.hpp  FieldList.hpp  FunctorField.hpp  InternalDevice.hpp  Limits.hpp  MemoryFile.hpp  VolatileField.hpp
DroneDevice/Include/DroneDevice/PayloadProtocol/: DeviceRequestDescriptor.hpp  SerialHandler.hpp  SerialPacket.hpp  SerialParser.hpp
DroneDevice/Include/DroneDevice/PlazCan/: CanDevice.hpp  CanHelpers.hpp  CanProxy.hpp  CanProxyFeature.hpp  CanProxyHub.hpp  CanardWrapper.hpp  DebugHelpers.hpp  DeviceRequestDescriptor.hpp  HashFinder.hpp  InternalCanDevice.hpp  ParamRequestDescriptor.hpp  ParamSlave.hpp  PlatformWrapper.hpp  PlazCanPacket.hpp  PlazCanSlave.hpp  ProxyRequestDescriptor.hpp  UavCanHandler.hpp  UavCanPacket.hpp
DroneDevice/Include/DroneDevice/Stubs/: MockField.hpp  MockMemoryInterface.hpp  MockMemoryRegion.hpp  MockMutex.hpp  MockReloader.hpp  MockRng.hpp  MockTime.hpp  MockUid.hpp  MockWatchdog.hpp  PlainText.hpp
DroneDevice/Libs/: CMakeLists.txt
DroneDevice/Libs/libcanard/: canard.c  canard.h  canard_internals.h
DroneDevice/Tests/: CMakeLists.txt  CMakeLists.txt.in
DroneDevice/Tests/ConfigFields/: DUT.hpp  Main.cpp  MockConfig.hpp  MockMemory.hpp
DroneDevice/Tests/ExtendedFields/: DUT.cpp  DUT.hpp  Main.cpp
DroneDevice/Tests/File/: DUT.hpp  Main.cpp
DroneDevice/Tests/GenericFields/: DUT.cpp  DUT.hpp  Main.cpp
DroneDevice/Tests/Utils/: Main.cpp
DroneDevice/cmake/: cortex-m0.cmake  cortex-m3.cmake  cortex-m4.cmake  cortex-m7.cmake
DroneDevicePlatform/: CMakeLists.txt
DroneDevicePlatform/Platform/: CMakeLists.txt
DroneDevicePlatform/Platform/Cortex-M/: CMakeLists.txt
DroneDevicePlatform/Platform/Cortex-M/Platform/: AsmHelpers.cpp  AsmHelpers.hpp  Core.cmake  Irq.hpp  LocalTime.cpp  LocalTime.hpp  WorkQueue.hpp
DroneDevicePlatform/Platform/STM32/Platform/: CanV1.hpp  CdcAcm.cpp  CdcAcm.hpp  HwRng.hpp  I2cV1.hpp  I2cV2.hpp  I2cV2Helpers.hpp  I2cV2Irq.hpp  I2cV3.hpp  Pwm.hpp  Rng.hpp  Spi.hpp  SpiDma.hpp  Timer.hpp  UsartV1.hpp  UsartV2.hpp  Watchdog.hpp
DroneDevicePlatform/Platform/STM32F0xx/: CMakeLists.txt
DroneDevicePlatform/Platform/STM32F0xx/Platform/: AdcBase.hpp  AdcBus.hpp  AdcSingleChannel.hpp  Can.cpp  Can.hpp  Dma.cpp  Dma.hpp  ExtInterrupt.cpp  ExtInterrupt.hpp  Flash.hpp  Gpio.hpp  HwCrc32.hpp  I2c.cpp  I2c.hpp  I2cBase.hpp  I2cIrq.hpp  Reloader.hpp  SpiBase.hpp  TimerBase.cpp  TimerBase.hpp  Uid.hpp  Usart.cpp  Usart.hpp
DroneDevicePlatform/Platform/STM32F1xx/: CMakeLists.txt
DroneDevicePlatform/Platform/STM32F1xx/Platform/: AdcBase.hpp  AdcBus.hpp  AdcBusBuffered.hpp  AdcSingleChannel.hpp  Can.cpp  Can.hpp  Dma.cpp  Dma.hpp  ExtInterrupt.cpp  ExtInterrupt.hpp  Flash.hpp  Gpio.hpp  HwCrc32.hpp  I2c.cpp  I2c.hpp  Pvd.cpp  Pvd.hpp  Reloader.hpp  SpiBase.hpp  TimerBase.cpp  TimerBase.hpp  Uid.hpp  Usart.cpp  Usart.hpp
DroneDevicePlatform/Platform/STM32F4xx/: CMakeLists.txt
DroneDevicePlatform/Platform/STM32F4xx/Platform/: AdcBase.hpp  AdcBus.hpp  AdcSingleChannel.hpp  Can.cpp  Can.hpp  Dma.cpp  Dma.hpp  ExtInterrupt.hpp  Flash.hpp  Gpio.hpp  HwCrc32.hpp  I2c.cpp  I2c.hpp  Pvd.hpp  Reloader.hpp  SpiBase.hpp  TimerBase.cpp  TimerBase.hpp  Uid.hpp  Usart.cpp  Usart.hpp
DroneDevicePlatform/Platform/STM32F76x/: CMakeLists.txt
DroneDevicePlatform/Platform/STM32F76x/Platform/: AdcBase.hpp  AdcBus.hpp  Can.cpp  Can.hpp  Dma.cpp  Dma.hpp  ExtInterrupt.cpp  ExtInterrupt.hpp  Flash.hpp  Gpio.hpp  HwCrc32.hpp  HwRng.hpp  I2c.cpp  I2c.hpp  QspiFlash.hpp  Reloader.hpp  SpiBase.hpp  TimerBase.cpp  TimerBase.hpp  Uid.hpp  Usart.cpp  Usart.hpp
Platform/AT32F4xx/: Platform.cmake
Platform/STM32F0xx/: Platform.cmake
Sources/: BaseApplication.cpp  BaseApplication.hpp  CMakeLists.txt
Templates/: BoardTemplate.hpp  MemoryTemplate.ld  VersionTemplate.cpp  VersionTemplate.hpp
cmake/: AddSphinxTarget.cmake  FindSphinx.cmake  GenerateVersion.cmake  GetGitRevisionDescription.cmake  cortex-m0.cmake  cortex-m3.cmake  cortex-m4.cmake  cortex-m7.cmake
